Amarok ChangeLog
================
(C) 2002-2012 the Amarok authors.

VERSION 2.7.1
  CHANGES:
   * Problematic support for treating MusicBrainz ids as track unique ids was dropped;
     should avoid surprising "Duplicate Tracks Found" errors. (BR 315329)

  BUGFIXES:
   * Fix compilation error on systems with gcc-4.2 (BR 314528)
   * Fix inability to create database when home directory contains non-ASCII characters.
     (BR 313914)
   * Fix typo in Nepomuk query which did not let track numbers of Nepomuk Collection
     tracks show up in Amarok. (BR 311847)

VERSION 2.7
  CHANGES:
    * Files page has been made more intuitive by making Places the root view
      and significantly improving breadcrumbs behaviour.
    * Make dropping large directories into playlist more responsive by reading
      track metadata asynchronously in a background thread.
    * Harmonize keyboard, mouse and context menu behaviour of the Files pane
      so that it matches Local Music and Saved Playlists panes. (BR 307386)
    * Last.fm Skip button re-added after being removed in Beta by error. (BR 311733)
    * Podcast episodes are now loaded asynchronously on startup to reduce delays.
    * Removed alpha state and not really working spectrum analyzer applet.

  BUGFIXES:
    * Fix a regression where stream metadata would be forgotten on start. (BR 305389)
    * Fix scrobbling of plain files streamed over http. (BR 309976)
    * Fix scrobble-before-play behaviour when playing Last.fm streams.
    * Fix double-scrobbling when playing Last.fm streams. (BR 311852)
    * Fix The size of rating stars should not change in inline editing (BR 209684)
    * Various improvements that should result in more stable Audio CD playback
      (modulo phonon-vlc BR 313046). (BR 305708, BR 308084, BR 311446)
    * Fix queued track indicator overflow, patch by Riccardo Ferrazzo. (BR 253802)
    * Fix Amarok crashes when selecting song with Enter [@ Playlist::PrettyListView::trackActivate] (BR 312439)